--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "mongoose": "^7.0.4",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "tailwindcss": "3.3.1"
   }
 }
